mix format --check-formatted

--- a/lib/scorpius_sonnet_web/controllers/demos/demo_html/show.html.heex
+++ b/lib/scorpius_sonnet_web/controllers/demos/demo_html/show.html.heex
@@ -2,4 +2,5 @@
   <!-- Vue app will mount here -->
 </div>
 
-<script type="module" src={VitePhx.asset_path("demos/#{@demo_id}/main.js")}></script> 
+<script type="module" src={VitePhx.asset_path("demos/#{@demo_id}/main.js")}>
+</script>
