--- a/lib/scorpius_sonnet_web/components/layouts/root.html.heex
+++ b/lib/scorpius_sonnet_web/components/layouts/root.html.heex
@@ -7,10 +7,12 @@
     <.live_title suffix=" · Phoenix Framework">
       <%= assigns[:page_title] || "ScorpiusSonnet" %>
     </.live_title>
-    <%= raw(VitePhx.vite_client()) %>
-    <script type="module" src={VitePhx.asset_path("main/app.js")}></script>
+    <%= if !assigns[:skip_app_js] do %>
+      <script type="module" src="http://localhost:5175/@vite/client"></script>
+      <script type="module" src="http://localhost:5175/main/app.js"></script>
+    <% end %>
   </head>
-  <body class="bg-white">
+  <body class="bg-white antialiased">
     <%= @inner_content %>
   </body>
 </html>
