--- a/lib/scorpius_sonnet_web/controllers/demos/react_demo/page_html/index.html.heex
+++ b/lib/scorpius_sonnet_web/controllers/demos/react_demo/page_html/index.html.heex
@@ -1,3 +1,10 @@
-<div id="demo-react"></div>
+<div id="root"></div>
+<script type="module">
+import RefreshRuntime from "http://localhost:5175/@react-refresh"
+RefreshRuntime.injectIntoGlobalHook(window)
+window.$RefreshReg$ = () => {}
+window.$RefreshSig$ = () => (type) => type
+window.__vite_plugin_react_preamble_installed__ = true
+</script>
 <%= raw(VitePhx.vite_client()) %>
-<script type="module" src={VitePhx.asset_path("demos/react-demo/main.jsx")}></script> 
+<script type="module" src={VitePhx.asset_path("demos/react-demo/main.jsx")}></script>
