--- a/lib/scorpius_sonnet_web/controllers/demos/christmas/page_html/index.html.heex
+++ b/lib/scorpius_sonnet_web/controllers/demos/christmas/page_html/index.html.heex
@@ -1,3 +1,4 @@
 <div id="demo-christmas"></div>
 <%= raw(VitePhx.vite_client()) %>
-<script type="module" src={VitePhx.asset_path("demos/christmas/main.js")}></script>
+<script type="module" src={VitePhx.asset_path("demos/christmas/main.js")}>
+</script>
