--- a/lib/scorpius_sonnet_web/controllers/demos/christmas_meta/page_html/index.html.heex
+++ b/lib/scorpius_sonnet_web/controllers/demos/christmas_meta/page_html/index.html.heex
@@ -53,7 +53,10 @@
           </div>
           <div class="emitter-container w-full h-[150px] flex flex-col justify-center items-center p-0 relative">
             <div class="emitter-input-textarea w-full h-full p-[10px] pl-[15px]">
-                <textarea class="w-full h-full border border-[#FFD700] rounded-[4px] bg-transparent focus:border-[#FFEA00] hover:border-[#FFEA00] active:border-[#FFEA00] focus:outline-none focus:ring-0 caret-[#FFEA00] p-[10px] pl-[15px]" id="danmuInput"></textarea>
+              <textarea
+                class="w-full h-full border border-[#FFD700] rounded-[4px] bg-transparent focus:border-[#FFEA00] hover:border-[#FFEA00] active:border-[#FFEA00] focus:outline-none focus:ring-0 caret-[#FFEA00] p-[10px] pl-[15px]"
+                id="danmuInput"
+              ></textarea>
             </div>
             <div class="emitter-input-container">
               <button class="emitter-input-button" id="sendDanmu">
@@ -89,4 +92,5 @@
     </div>
   </div>
 </div>
-<script type="module" src={VitePhx.asset_path("demos/christmas-meta/main.js")}></script> 
+<script type="module" src={VitePhx.asset_path("demos/christmas-meta/main.js")}>
+</script>
