--- a/lib/scorpius_sonnet_web/controllers/demos/counter/page_html/index.html.heex
+++ b/lib/scorpius_sonnet_web/controllers/demos/counter/page_html/index.html.heex
@@ -1,3 +1,4 @@
 <div id="demo-counter"></div>
 <%= raw(VitePhx.vite_client()) %>
-<script type="module" src={VitePhx.asset_path("demos/counter/main.js")}></script> 
+<script type="module" src={VitePhx.asset_path("demos/counter/main.js")}>
+</script>
