--- a/lib/scorpius_sonnet_web/controllers/demos/christmas_meta/page_html/index.html.heex
+++ b/lib/scorpius_sonnet_web/controllers/demos/christmas_meta/page_html/index.html.heex
@@ -34,7 +34,7 @@
           </div>
         </div>
       </div>
-      <div class="swiper-slide">
+      <div class="swiper-slide BackgroundBlur">
         <%!-- Slide 2 --%>
         <div class="controller-container absolute top-0 left-0 right-0 flex justify-center items-center">
           <div class="controller-item">
@@ -68,7 +68,7 @@
           </div>
         </div>
       </div>
-      <div class="swiper-slide">
+      <div class="swiper-slide BackgroundBlur">
         <%!-- Slide 3 --%>
         <div class="controller-container absolute top-0 left-0 right-0 flex justify-center items-center">
           <div class="controller-item">
@@ -79,14 +79,41 @@
               <span class="button-gradient"></span>
             </button>
           </div>
-          <div class="controller-item">
-            <%!-- <button class="controller-item-button" id="bullet-list">
-              <span class="controller-item-button-text">
-                弹幕列表
-              </span>
-              <span class="button-gradient"></span>
-            </button> --%>
-          </div>
+          <div class="controller-item"></div>
+        </div>
+        <div class="register-user-container h-screen flex flex-col justify-center items-center">
+          <form class="form-container bg-white p-6 rounded-lg shadow-md" id="registerUserForm">
+            <h2 class="form-title text-lg font-bold mb-4">登记用户信息</h2>
+            <div class="form-group mb-4">
+              <label for="nickname" class="form-label">昵称</label>
+              <input type="text" id="nickname" class="form-input" />
+            </div>
+            <div class="form-group mb-4">
+              <label for="email" class="form-label">邮箱</label>
+              <input type="email" id="email" class="form-input" />
+            </div>
+            <div class="form-group mb-4 flex">
+              <div class="country-code mr-2">
+                <label for="country" class="form-label">国家/地区</label>
+                <select id="country" class="form-input">
+                  <option>+86</option>
+                  <!-- Add more country codes as needed -->
+                </select>
+              </div>
+              <div class="phone-number flex-1">
+                <label for="phone" class="form-label">手机号</label>
+                <input type="text" id="phone" class="form-input" />
+              </div>
+            </div>
+            <div class="form-group mb-4">
+              <label for="terms" class="form-label">
+                <input type="checkbox" id="terms" class="form-checkbox" />
+                  同意并遵守
+                </label>
+                <p class="text-sm text-gray-600">我同意并遵守圣诞元宇宙活动规则和隐私政策。</p>
+            </div>
+            <button type="submit" class="form-submit-button" id="submitButton">提交</button>
+          </form>
         </div>
       </div>
     </div>
