update html format

--- a/lib/scorpius_sonnet_web/controllers/demos/christmas_meta/page_html/index.html.heex
+++ b/lib/scorpius_sonnet_web/controllers/demos/christmas_meta/page_html/index.html.heex
@@ -107,10 +107,9 @@
             </div>
             <div class="form-group mb-4">
               <label for="terms" class="form-label">
-                <input type="checkbox" id="terms" class="form-checkbox" />
-                  同意并遵守
-                </label>
-                <p class="text-sm text-gray-600">我同意并遵守圣诞元宇宙活动规则和隐私政策。</p>
+                <input type="checkbox" id="terms" class="form-checkbox" /> 同意并遵守
+              </label>
+              <p class="text-sm text-gray-600">我同意并遵守圣诞元宇宙活动规则和隐私政策。</p>
             </div>
             <button type="submit" class="form-submit-button" id="submitButton">提交</button>
           </form>
