mix format --force

--- a/lib/scorpius_sonnet_web/controllers/page_html/home.html.heex
+++ b/lib/scorpius_sonnet_web/controllers/page_html/home.html.heex
@@ -47,10 +47,7 @@
   <UIComponents.section class="px-6 lg:px-8">
     <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
       <div class="text-center">
-        <UIComponents.page_title
-          title="Scorpius Sonnet"
-          subtitle="现代 Web 开发框架"
-        />
+        <UIComponents.page_title title="Scorpius Sonnet" subtitle="现代 Web 开发框架" />
         <p class="mt-6 text-lg leading-8 text-gray-600">
           一个现代的 Web 应用程序框架，基于 Phoenix 和 Elixir 构建
         </p>
