--- a/lib/scorpius_sonnet_web/components/layouts/admin.html.heex
+++ b/lib/scorpius_sonnet_web/components/layouts/admin.html.heex
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
     <title>管理后台</title>
+    <%= raw(VitePhx.vite_client("main")) %>
+    <script type="module" src={VitePhx.asset_path("main/admin")}>
+    </script>
   </head>
   <body class="bg-gray-100">
     <%= @inner_content %>
