--- a/lib/scorpius_sonnet_web/components/layouts/root.html.heex
+++ b/lib/scorpius_sonnet_web/components/layouts/root.html.heex
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" class="[scrollbar-gutter:stable]">
+<html lang="zh-CN" class="[scrollbar-gutter:stable]">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
-    <.live_title suffix=" · Phoenix Framework">
-      <%= assigns[:page_title] || "ScorpiusSonnet" %>
+    <.live_title suffix=" · Scorpius Sonnet Root">
+      <%= assigns[:page_title] || "Scorpius Sonnet" %>
     </.live_title>
     <%= if !assigns[:skip_app_js] do %>
-      <script type="module" src="http://localhost:5175/@vite/client">
-      </script>
-      <script type="module" src="http://localhost:5175/main/app.js">
+      <%= raw(VitePhx.vite_client("main")) %>
+      <link rel="stylesheet" href={VitePhx.css_path("main/normal")} />
+      <script type="module" src={VitePhx.asset_path("main/normal")}>
       </script>
     <% end %>
   </head>
   <body class="bg-white antialiased">
+    <div id="app"></div>
     <%= @inner_content %>
   </body>
 </html>
