--- a/lib/scorpius_sonnet_web/components/layouts/christmas.html.heex
+++ b/lib/scorpius_sonnet_web/components/layouts/christmas.html.heex
@@ -8,8 +8,8 @@
       <%= assigns[:page_title] || "Christmas Demo" %>
     </.live_title>
     <%= raw(VitePhx.vite_client("demos")) %>
-    <link rel="stylesheet" href={VitePhx.css_path("demos/christmas/index")} />
-    <script type="module" src={VitePhx.asset_path("demos/christmas/index")}>
+    <link rel="stylesheet" href={VitePhx.css_path("demos/christmas")} />
+    <script type="module" src={VitePhx.asset_path("demos/christmas")}>
     </script>
   </head>
   <body class="bg-red-50">
