--- a/lib/scorpius_sonnet_web/components/layouts/christmas_meta.html.heex
+++ b/lib/scorpius_sonnet_web/components/layouts/christmas_meta.html.heex
@@ -8,8 +8,8 @@
       <%= assigns[:page_title] || "Christmas Meta Demo" %>
     </.live_title>
     <%= raw(VitePhx.vite_client("demos")) %>
-    <link rel="stylesheet" href={VitePhx.css_path("demos/christmas_meta/index")} />
-    <script type="module" src={VitePhx.asset_path("demos/christmas_meta/index")}>
+    <link rel="stylesheet" href={VitePhx.css_path("demos/christmas-meta")} />
+    <script type="module" src={VitePhx.asset_path("demos/christmas-meta/main.js")}>
     </script>
   </head>
   <body class="bg-red-100">
